--- a/style.css
+++ b/style.css
@@ -15,8 +15,9 @@
 .dino {
   width: 50px;
   height: 50px;
+  margin: 5px;
   position: absolute;
-  bottom: 5px;
-  left: 5px;
+  bottom: 0;
+  left: 0;
   background-color: yellowgreen;
 }
